src/objects/Service_Usage_Outcome_History__c.object
<CustomObject>
    <description>History of Service Usage Outcomes</description>
    <fields>
        <fullName>Changed_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Date_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed Date Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Date_Outcome_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed Date Outcome Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Outcome_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed Outcome Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Outcome_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed Outcome Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Person_Identified_Outcome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed Person Identified Outcome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NewAction__c</fullName>
        <label>NewAction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewDate_Identified__c</fullName>
        <label>NewDate Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewDate_Outcome_Met__c</fullName>
        <label>NewDate Outcome Met</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewOutcome_Category__c</fullName>
        <label>NewOutcome Category</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewOutcome_Status__c</fullName>
        <label>NewOutcome Status</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewPerson_Identified_Outcome__c</fullName>
        <label>NewPerson Identified Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldAction__c</fullName>
        <label>OldAction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldDate_Identified__c</fullName>
        <label>OldDate Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OldDate_Outcome_Met__c</fullName>
        <label>OldDate Outcome Met</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OldOutcome_Category__c</fullName>
        <label>OldOutcome Category</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldOutcome_Status__c</fullName>
        <label>OldOutcome Status</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldPerson_Identified_Outcome__c</fullName>
        <label>OldPerson Identified Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_No__c</fullName>
        <label>Outcome No.</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Usage_Outcome__c</fullName>
        <label>Service Usage Outcome</label>
        <referenceTo>Service_Usage_Outcome__c</referenceTo>
        <relationshipLabel>Service Usage Outcome History</relationshipLabel>
        <relationshipName>Service_Usage_Outcome_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Usage__c</fullName>
        <formula>Service_Usage_Outcome__r.Service_Usage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Usage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Usage Outcome History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Service Usage Outcome History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Usage Outcome History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>